@@ -1,10 +1,29 @@
 package com.dotcms.business.bytebuddy;
 
+import static net.bytebuddy.matcher.ElementMatchers.declaresMethod;
+import static net.bytebuddy.matcher.ElementMatchers.isAnnotatedWith;
+import static net.bytebuddy.matcher.ElementMatchers.isMethod;
+import static net.bytebuddy.matcher.ElementMatchers.isSynthetic;
+import static net.bytebuddy.matcher.ElementMatchers.nameStartsWith;
+
 import com.dotcms.business.CloseDB;
 import com.dotcms.business.CloseDBIfOpened;
+import com.dotcms.business.ExternalTransaction;
 import com.dotcms.business.WrapInTransaction;
+import com.dotcms.business.interceptor.CoreDatabaseConnectionOps;
+import com.dotcms.business.interceptor.CoreInterceptorLogger;
+import com.dotcms.business.interceptor.CoreLicenseOps;
+import com.dotcms.business.interceptor.CoreTransactionOps;
+import com.dotcms.business.interceptor.InterceptorServiceProvider;
+import com.dotcms.cost.RequestCost;
+import com.dotcms.cost.RequestCostAdvice;
 import com.dotcms.util.EnterpriseFeature;
 import com.dotcms.util.LogTime;
+import java.lang.annotation.Annotation;
+import java.lang.instrument.Instrumentation;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 import net.bytebuddy.agent.ByteBuddyAgent;
 import net.bytebuddy.agent.builder.AgentBuilder;
 import net.bytebuddy.asm.Advice;
@@ -16,20 +35,8 @@ import net.bytebuddy.dynamic.DynamicType;
 import net.bytebuddy.matcher.ElementMatcher;
 import net.bytebuddy.matcher.ElementMatchers;
 import net.bytebuddy.utility.JavaModule;
-
-import java.lang.annotation.Annotation;
-import java.lang.instrument.Instrumentation;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-
-import static net.bytebuddy.matcher.ElementMatchers.declaresMethod;
-import static net.bytebuddy.matcher.ElementMatchers.isAnnotatedWith;
-import static net.bytebuddy.matcher.ElementMatchers.isMethod;
-import static net.bytebuddy.matcher.ElementMatchers.isSynthetic;
-import static net.bytebuddy.matcher.ElementMatchers.nameStartsWith;
 
 /**
  * Initializes ByteBuddy to handle transactional annotations. This replaces AspectJ functionality
@@ -49,7 +56,9 @@ public class ByteBuddyFactory {
             CloseDB.class, CloseDBAdvice.class,
             CloseDBIfOpened.class, CloseDBIfOpenedAdvice.class,
             LogTime.class, LogTimeAdvice.class,
-            EnterpriseFeature.class, EnterpriseFeatureAdvice.class
+            EnterpriseFeature.class, EnterpriseFeatureAdvice.class,
+            ExternalTransaction.class, ExternalTransactionAdvice.class,
+            RequestCost.class, RequestCostAdvice.class
     );
 
 
@@ -70,13 +79,44 @@ public class ByteBuddyFactory {
     }
 
     public static void init() {
+        // Register core SPI implementations so that handlers/advice delegate to the
+        // real DbConnectionFactory, HibernateUtil, LicenseUtil, and Logger.
+        InterceptorServiceProvider.init(
+                CoreDatabaseConnectionOps.INSTANCE,
+                CoreTransactionOps.INSTANCE,
+                CoreLicenseOps.INSTANCE,
+                CoreInterceptorLogger.INSTANCE);
+
         if (!agentLoaded.get()) {
             try {
-                premain(null, ByteBuddyAgent.install());
+                premain(null, resolveInstrumentation());
                 LOGGER.info("Loaded ByteBuddy Advice");
             } catch (Exception e) {
-                LOGGER.error("Cannot install ByteBuddy Advice");
+                LOGGER.error("Cannot install ByteBuddy Advice", e);
             }
+        }
+    }
+
+    /**
+     * Returns an {@link Instrumentation} instance, preferring one already supplied by
+     * a {@code -javaagent:byte-buddy-agent.jar} at JVM startup. This avoids
+     * {@link ByteBuddyAgent#install()}'s external-attach fallback, which spawns a child
+     * JVM and blocks on {@code Process.waitFor()} — that path hangs indefinitely on
+     * Java 21+/25 in containers where the JDK attach binaries are absent or restricted
+     * (see ByteBuddyAgent.installExternal).
+     *
+     * Falls back to {@link ByteBuddyAgent#install()} only when no agent was preloaded
+     * (typical for IDE/test runs where {@code -Djdk.attach.allowAttachSelf=true} is set).
+     */
+    private static Instrumentation resolveInstrumentation() {
+        try {
+            return ByteBuddyAgent.getInstrumentation();
+        } catch (IllegalStateException notPreloaded) {
+            LOGGER.warn("byte-buddy-agent not pre-loaded via -javaagent; "
+                    + "falling back to runtime self-attach. "
+                    + "In production set -javaagent:<path>/byte-buddy-agent.jar to avoid "
+                    + "the external-attach path which can hang on Java 21+ in containers.");
+            return ByteBuddyAgent.install();
         }
     }
 
@@ -102,7 +142,6 @@ public class ByteBuddyFactory {
         for (String packageElement : packageIgnore)
             ignoresByName = ignoresByName.or(nameStartsWith(packageElement));
 
-
         // will filter by name first and then by annotation
         ElementMatcher.Junction<TypeDefinition> classMatcher = selectByName.and(hasAnnotatedMethods());
 
@@ -120,12 +159,32 @@ public class ByteBuddyFactory {
                     .transform((builder, typeDescription, classLoader, module, protectionDomain) -> {
                         DynamicType.Builder<?> newBuilder = builder;
                         for (Map.Entry<Class<? extends Annotation>, Class<?>> entry : adviceMap.entrySet()) {
-                            newBuilder = getAdvice(entry.getKey(), entry.getValue()).transform(newBuilder, typeDescription, classLoader, module, protectionDomain);
+                            newBuilder = getAdvice(entry.getKey(), entry.getValue()).transform(newBuilder,
+                                    typeDescription, classLoader, module, protectionDomain);
                         }
                         return newBuilder;
                     })
 
                     .installOn(inst);
+
+            // Explicitly retransform VelocityUtil if it's already loaded
+            try {
+                Class<?> velocityUtilClass = Class.forName("com.dotcms.rendering.velocity.util.VelocityUtil", false,
+                        Thread.currentThread().getContextClassLoader());
+                if (velocityUtilClass != null) {
+                    LOGGER.info("VelocityUtil was already loaded, retransforming it now");
+                    inst.retransformClasses(velocityUtilClass);
+                }
+            } catch (ClassNotFoundException e) {
+                LOGGER.debug("VelocityUtil not yet loaded, will be transformed when loaded");
+            } catch (Exception e) {
+                LOGGER.warn("Could not retransform VelocityUtil", e);
+            }
+
+
+
+
+
             LOGGER.info("ByteBuddy Initialized");
         } catch (Exception e) {
             LOGGER.error("Error Initializing ByteBuddy", e);
